notes/bugs.txt
34. Tab completion vs. sudo -- shell crash

If we enter this much of a command:

    sudo -i [ ls /home/jao/.dbus/ses

tab-completion runs into permission problems trying to do its work.

----------------------------------------------------------------------

47. Emacs in background doesn't work

- Run emacs
- Ctrl-Z

Goes to background, but bg and fg do not revive it.

Complete "help interaction" when this is working.

As of about June 9, job control works on the console, but emacs never
suspends, and in fact it is no longer owned by the marcel
process. Exiting marcel leaves emacs running.

----------------------------------------------------------------------

48. Syntax error in .marcel.py should be handled more gracefully

jao@cheese:~/git/marcel/test$ marcel
Traceback (most recent call last):
  File "/usr/lib/python3.7/runpy.py", line 193, in _run_module_as_main
    "__main__", mod_spec)
  File "/usr/lib/python3.7/runpy.py", line 85, in _run_code
    exec(code, run_globals)
  File "/home/jao/git/marcel/marcel/main.py", line 211, in <module>
    MAIN = Main()
  File "/home/jao/git/marcel/marcel/main.py", line 90, in __init__
    self.env = marcel.env.Environment(self.config)
  File "/home/jao/git/marcel/marcel/env.py", line 136, in __init__
    self.read_config(config_file)
  File "/home/jao/git/marcel/marcel/env.py", line 201, in read_config
    exec(config_source, self.namespace, locals)
  File "<string>", line 64
    cat = [ map (f: (f, f.readlines())) | expand 1 ]
                  ^
SyntaxError: invalid syntax

----------------------------------------------------------------------

58. Infinite loop in help

There was a typo in the HELP for ps:

HELP = '''
{L,wrap=F}ps [-u|--user [USER]] [-g|--group [GROUP}] [-p|--pid PID] [-c|--command STRING]

Note that GROUP is followed by } instead of ]. That seemed to put 
help into an infinite loop.
----------------------------------------------------------------------

66. Parsing error due to whitespace

M-0.9.15 jao@cheese:~/git/marcel$ gen 3 | map(x: x+1)
Error: Running map(lambda: f'''map{x: x+1}''') on (0,): <lambda>() takes 0 positional arguments but 1 was given
Error: Running map(lambda: f'''map{x: x+1}''') on (1,): <lambda>() takes 0 positional arguments but 1 was given
Error: Running map(lambda: f'''map{x: x+1}''') on (2,): <lambda>() takes 0 positional arguments but 1 was given

Lexer.consolidate_tokens consolidates map and (...

IS THIS A BUG?

----------------------------------------------------------------------

67. Pipeline syntax needs to be generalized

    M-0.9.15 jao@cheese:~/git/marcel$ gen 3 | map (x: x + 5)
    5
    6
    7
    M-0.9.15 jao@cheese:~/git/marcel$ gen 3 | [x: map (x + 5)]
    Parsing error at position 8 of "...gen 3 | [x: map (x + 5)]...": Unexpected token type: Begin([)

This syntax:

    ... | [ ... ]

is rejected by the parser, which means we can't have pipelines with
parameters as literals. Fix the parser.

----------------------------------------------------------------------

69. Shell crashes on bad first arg to loop

M-0.9.17 jao@cheese:~$ loop (10, 1) [select (x, f: x > 0) | emit | map (x, f: (x-1, f*x))]
Traceback (most recent call last):
  File "/usr/lib/python3.8/runpy.py", line 193, in _run_module_as_main
    return _run_code(code, main_globals, None,
  File "/usr/lib/python3.8/runpy.py", line 86, in _run_code
    exec(code, run_globals)
  File "/home/jao/git/marcel/marcel/main.py", line 271, in <module>
    MAIN.run()
  File "/home/jao/git/marcel/marcel/main.py", line 123, in run
    self.run_command(line)
  File "/home/jao/git/marcel/marcel/main.py", line 136, in run_command
    pipeline = parser.parse()
  File "/home/jao/git/marcel/marcel/parser.py", line 704, in parse
    return self.command()
  File "/home/jao/git/marcel/marcel/parser.py", line 710, in command
    return self.pipeline(None)
  File "/home/jao/git/marcel/marcel/parser.py", line 730, in pipeline
    op_sequence = Parser.ensure_sequence(self.op_sequence())
  File "/home/jao/git/marcel/marcel/parser.py", line 740, in op_sequence
    op_args = self.op_args()
  File "/home/jao/git/marcel/marcel/parser.py", line 761, in op_args
    op = self.create_op(op_token, arg_tokens)
  File "/home/jao/git/marcel/marcel/parser.py", line 824, in create_op
    op = self.create_op_builtin(op_token, arg_tokens)
  File "/home/jao/git/marcel/marcel/parser.py", line 852, in create_op_builtin
    args.append(x.value(self) if isinstance(x, Token) else x)
  File "/home/jao/git/marcel/marcel/parser.py", line 298, in value
    self._function = marcel.functionwrapper.FunctionWrapper(function=function,
  File "/home/jao/git/marcel/marcel/functionwrapper.py", line 56, in __init__
    self._globals = self._function.__globals__
AttributeError: 'tuple' object has no attribute '__globals__'

----------------------------------------------------------------------

79. less doesn't work

----------------------------------------------------------------------

85. Any env var can be deleted

Even important ones, like PROMPT. Some of them need to be protected.

----------------------------------------------------------------------

87. Assign pipeline without brackets

Should it be allowed? If not, this failure mode is pretty bad:

    M-0.10.8 jao@cheese:~/git/marcel/marcel/object$ g = gen 5
    M-0.10.8 jao@cheese:~/git/marcel/marcel/object$ (g)
    gen

The string "gen" is assigned and the rest is ignored.

----------------------------------------------------------------------

89. Be able to execute marcel script from inside marcel

Don't require use of host shell.
    
----------------------------------------------------------------------

95. emacs no longer working

Specific to root.

M-0.10.13 root@cheese:/media/backup/daily/2020.08.26# emacs
emacs: Could not open file: /dev/tty
Escaped command failed with exit code 1: emacs
None

----------------------------------------------------------------------

97. ... | args [n: sql 'insert ... values(%s) (n)' does, essentially, autocommit

The problem is that each invocation of the pipeline does sql setup, receive, receive_complete.

----------------------------------------------------------------------

99. Redirection doesn't work for executables

This works, putting a list of Files into x:

    ls > x

This does not work:

    date > x

Error message: Variable date is undefined.

----------------------------------------------------------------------

100. Space after tab-completed flag is missing

ls --r<tab>

should produce '--recursive '. The space is omitted.

----------------------------------------------------------------------

102. Set ops can't be applied to lists

And the lists can't be anywhere, not even deeply nested. The problem
is hashing, which is applied deeply, and may reach a list. Lists are
not hashable.

Comparison-based algorithms are out too, since, for example:

    >>> [1,2] < ['a']
    Traceback (most recent call last):
      File "<stdin>", line 1, in <module>
    TypeError: '<' not supported between instances of 'int' and 'str'

Hmm.

----------------------------------------------------------------------

108. quote_files is failing, but only through the API?!

This fails, in test_api:

    TEST.run(test=lambda: run(ls('/tmp/a', file=True) |
                              args(lambda files: bash(f'mv -t d {quote_files(files)}'), all=True)),
             verification=lambda: run(ls('d', file=True) | map(lambda f: f.name)),
             expected_out=['a file', "a file with a ' mark", 'a_file'])

the quoted files are messed up, mv -t d ... fails. The command passed to bash is:

    mv -t d '/tmp/a/a file' '/tmp/a/a file with a '"'"' mark' /tmp/a/a_file

But somehow the quote marks get escaped, I think. Test is disabled for now.

The equivalent test in test_ops succeeds!?!?!?!

----------------------------------------------------------------------

113. Farcel error reporting is broken

ls /nosuchfile: Generates an error
@jao [ls /nosuchfile]: Error message shows up as output (see test_api test_remote)

Need to review how errors and exceptions are reported from farcel.

----------------------------------------------------------------------

114. Ctrl-C doesn't clean up temp file

- gen 10000000 > x
- ctrl-c while it's running

The env var isn't there, but the temp file is.

----------------------------------------------------------------------

123. This should be a syntax error

M-0.11.1 jao@cheese:~/git/marcel$ p = gen n | args [n: echo (n)]
M-0.11.1 jao@cheese:~/git/marcel$ (p)
gen

----------------------------------------------------------------------

127. API env missing symbols

E.g. USER, HOME.

----------------------------------------------------------------------

128. Tab completion vs. syntactic sugar

For "var > ..." or "./file > ...", tab completion doesn't work. Tab
completion for first symbol expects executable.

----------------------------------------------------------------------

137. Why are there excess tokens?

ls *.{py,txt}
[ls(depth=recursive, include=, filename=?)] followed by excess tokens: Comma(,), String(txt})

{} should be part of the FILENAME

Because comma is parsed.

----------------------------------------------------------------------

144. Use of colon in a bash command is problematic

COLON is a Lexer token.

M 0.11.12 jao@cheese:~$ bash scp ~/.marcel.py jorenstein@nd:/home/jorenstein
[bash(args=None)] followed by excess tokens: Colon(:), String(/home/jorenstein)
